--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -9,6 +9,13 @@
     background-size: cover
     background-position: center
 
+    @include mobile
+        height: 100vh
+
+    nav
+        @include mobile
+            display: none
+
     .nav-container
         display: flex
         justify-content: space-between
@@ -19,6 +26,9 @@
         padding: 1.5rem 2rem
         background-color: $black
         z-index: 10
+
+        @include mobile
+            padding: 1rem
 
         .brand
             color: $light-color
@@ -42,6 +52,9 @@
             color: #fff
             display: none
 
+            @include mobile
+                display: block
+
     .title-container
         color: $light-color
         display: flex
@@ -49,6 +62,10 @@
         align-items: center
         justify-content: center
         height: 100%
+
+        @include mobile
+            text-align: center
+            padding: 2rem
 
         h2
             font-size: 3rem
@@ -72,6 +89,9 @@
         justify-content: space-around
         padding: 2rem
 
+        @include mobile
+            padding: 2rem 0
+
     .services-card
         width: 30%
         margin: 1%
@@ -79,6 +99,9 @@
         border: 1px solid #ccc
         transition: .3s
 
+        @include mobile
+            width: 100%
+            margin-block: 2rem
         i
             color: $primary-color
             font-size: 4rem
@@ -101,12 +124,17 @@
     background-color: $secondary-bg
     padding: 3rem
 
+    @include mobile
+        padding: 2rem
     h2
         @extend %section-title
 
     .job-list
         display: flex
         padding: 2rem 0
+
+        @include mobile
+            flex-direction: column
 
         .first-job
             width: 30%
@@ -119,10 +147,17 @@
             @extend %center-bg
             @extend %card-hover
 
+            @include mobile
+                @include card-mobile
+
         .other-jobs-container
             display: flex
             flex-wrap: wrap
             width: 68%
+
+            @include mobile
+                width: 100%
+                flex-direction: column
 
             .job-card
                 width: 46%
@@ -133,6 +168,9 @@
                 margin-right: 15px
                 @extend %center-bg
                 @extend %card-hover
+
+                @include mobile
+                    @include card-mobile
 
             #job2
                 background-image: url('../img/job2.jpg')
@@ -145,7 +183,7 @@
 
             #job5
                 background-image: url('../img/job5.jpg')
-        
+
         .job-card-cover
             position: absolute
             top: 0
@@ -158,13 +196,13 @@
 
         .job-card-title
             text-align: center
-            color: #FFF 
+            color: #FFF
             font-size: 2.2rem
             transition: .5s
 
         .job-card-description
             text-align: center
-            color: #FFF 
+            color: #FFF
             padding: 1rem
             font-size: .9rem
 
@@ -179,23 +217,41 @@ footer
         display: flex
         flex-wrap: wrap
 
+        @include mobile
+            max-width: 100%
+            flex-direction: column
+
         .footer-title
-            color: #FFF 
+            color: #FFF
             font-weight: bold
             margin-bottom: 1rem
+
     .footer-desc-container, .footer-links-container
         width: 50%
+        @include mobile
+            width: 100%
+            margin-bottom: 2rem
+            text-align: center
 
     .footer-desc-container
         p
             width: 80%
             line-height: 1.3rem
-    
+
+            @include mobile
+                width: 100%
+
     .footer-links-container
         display: flex
 
+        @include mobile
+            flex-direction: column
+
         &-list
             padding: 0 1rem
+
+            @include mobile
+                margin-bottom: 2rem
 
             li
                 margin-bottom: .5rem
@@ -205,11 +261,14 @@ footer
                     transistion: .5s
 
                     &:hover
-                        color: #FFF 
+                        color: #FFF
 
     .footer-copy-right-container
         width: 100%
         margin-top: 3rem
+
+        @include mobile
+            text-align: center
 
         p
             margin-bottom: 1rem
